Added layout code by convention search

--- a/demo/DemoWebSite/xrc/books/_loremIpsum.xrc.xhtml
+++ b/demo/DemoWebSite/xrc/books/_loremIpsum.xrc.xhtml
@@ -1,4 +1,5 @@
-﻿<div>
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<div>
 	<h3>Example using .xrc.xhtml file</h3>
 	<p>
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tincidunt, purus pretium ultricies rutrum, diam erat adipiscing magna, quis dapibus nisi metus vitae diam. Proin egestas pretium arcu, a dignissim magna eleifend in. Vestibulum sit amet sodales libero. Pellentesque lobortis turpis eu lorem ultricies tristique. Aenean quis laoreet mauris. Phasellus cursus convallis dolor, non aliquet mi sollicitudin ut. Nulla gravida nunc ut nisl varius cursus. Donec in erat eget nulla rutrum accumsan. Phasellus in lacus et tortor vehicula egestas vitae in ante. Sed felis purus, condimentum et vehicula nec, hendrerit sit amet ipsum.
